# Minimal_News_Digest

./: README.md  main.py  pyproject.toml  requirements.txt
